# Fame2PyGen

./: .gitignore  ARCHITECTURE.md  ASSESSMENT_SUMMARY.md  CHANGES_SUMMARY.md  CODE_OF_CONDUCT.md  CONDITIONAL_IMPROVEMENTS.md  CONTRIBUTING.md  FAME_conversion_examples.md  IMPLEMENTATION_SUMMARY.md  ISSUE_16_IMPLEMENTATION.md  LICENSE  NLRX_IMPLEMENTATION.md  README.md  TIME_SHIFT_FIXES.md  TIME_SHIFT_PCT_IMPLEMENTATION.md  c_pipeline.py  cformgen.py  cformulas.py  chain_sum_write_formgen.py  convpy4rmfame.py  date_range_transformer.py  demo_enhanced_functionality.py  fame_script_master.inp  formulagen.py  formulas.py  formulas_test.py  ple.py  polars_econ.py  polars_econ_mock.py  pyproject.toml  requirements.txt  setup.py  test_chain_sum_enhancements.py  test_date_output.py  test_enhancements.py  test_generated.py  test_issue_fix.py  test_multi_date_output.py  test_partitioning.py  ts_transformer.py  (+3 more)
examples/: business_day_frequency_example.py  conditional_expression_example.py  date_filter_transformer.py  date_filtering_example.py  date_range_subsetting_example.py  nlrx_example.py  sample_basic.inp  sqrt_and_date_filtering_example.py  sqrt_transformer.py
fame2pygen/: __init__.py  cli.py  fame2py_converter.py  formulas_generator.py  generators.py  model.py  parser.py  polars_econ_mock.py  preprocess.py  utils.py
logos/: README.md  logo1_textbased.md  logo2_ascii.md  logo3_modern.md
tests/: test_conditional_improvements.py  test_convert_grouping.py  test_date_enhancements.py  test_fame2pygen.py  test_generation.py  test_lsum.py  test_master_suite.py  test_nlrx.py  (+5 more)
