[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fame2pygen"
version = "0.1.0"
description = "Convert FAME-style formula scripts (.inp) into executable Polars-based Python modules."
authors = [
  {name="Your Name", email="you@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "polars>=0.20.0",
  "jinja2>=3.1.2"
]

[project.urls]
Homepage = "https://github.com/botlhale/Fame2PyGen"
Repository = "https://github.com/botlhale/Fame2PyGen"

[project.scripts]
fame2pygen = "fame2pygen.cli:main"

[tool.setuptools.packages.find]
where = ["."]